# AutoPresent

./: .gitignore  LICENSE  README.md  pyproject.toml
generate/: create_slide.py
refinement/: refine.py  refine_all.py
slidesbench/: README.md  seed_instruction.py
