[project]
name = "autopresent"
version = "0.1.0"
description = ""
authors = [
    {name = "HojunCho",email = "napping9100@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium (>=4.30.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.70.0,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "colormath (>=3.0.0,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
